styles/globals.css
:root {
  --max-width: 1200px;
  --border-radius: 12px;

  --accent-primary: #991b1b;
  --accent-secondary: #b500005a;

  --accent-primary: #1d4ed8;
  --accent-secondary: #1d4fd883;

/* GRADIENT BACKGROUND */
  /* https://codepen.io/P1N2O/pen/pyBNzX */



  --fg-text: #171717;
  --fg-heading: #12100f;
  --bg-primary: #fafaf9;
  --bg-secondary: #e4e4e7;

}
/* *{
  border: 1px solid gold;
} */

@media (prefers-color-scheme: dark) {
  :root {
    --fg-text: #d6d3d1;
    --fg-heading: #e4e4e7;
    --bg-primary: #12100f;
    --bg-secondary: #171717;

  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  display: flex;
  justify-content: center;
  background-color: var(--bg-primary);
}

body {
  display: flex;
  justify-content: center;
  max-width: 1200px;
  overflow-x: hidden;
}

a {
  color: inherit;
  text-decoration: none;
}

/* 
  Font settings 
*/
p {
  color: var(--fg-text);
  font-size: 15px;
  line-height: 22px;
  letter-spacing: 0.08em;
  font-weight: 300;
  margin-bottom: 0.8rem;
}
h1 {
  font-size: 72px;
  line-height: 90px;
  font-weight: 400;
}
h2 {
  font-size: 48px;
  line-height: 60px;
  font-weight: 500;
}
h3 {
  font-size: 32px;
  line-height: 40px;
  font-weight: 500;
}


@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }

  .filter-white {
    filter: saturate(0%) invert(100%);
  }
}

.section {
  background-color: var(--bg-primary);
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--fg-heading);
}



a:hover {
  color: var(--accent-primary);
}



/* Mobile */
@media (max-width: 700px) {
  .section, .hero-container, .project-item {
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
  }

  /* h1 {
    font-size: 40px;
    line-height: 60px;
  } */

  h2 {
    font-size: 28px;
    line-height: 35px;
  }
  
  h3 {
    font-size: 24px;
    line-height: 30px;
  }
}

/* Tablet and Smaller Desktop */
@media (min-width: 701px) and (max-width: 1120px) {
  .section, .hero-container {
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
  }

  /* h1 {
    font-size: 54px;
    line-height: 72px;
  } */

  h2 {
    font-size: 40px;
    line-height: 60px;
  }
}

.love-1 {
  display: inline-block;
  font-weight: 700;
  color: var(--accent-primary)
}

.project-image {
  display: flex;
  justify-content: center;
  width: 100%;
  min-width: 350px;
  padding: 1rem;
}

.contact-right, .contact-left {
  height: 100%;
  width: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.contact-left h3 {
  font-weight: 400;
  margin-bottom: 1rem;
}

.contact-right {
  display: flex;
  flex-direction: column;
  background-color: var(--accent-secondary);
}

/* floating labels */
.input-group { 
  width: 100%;
  max-width: 350px;
  position:relative; 
}
label {
  color: #333333; 
  font-size:14px;
  position:absolute;
  pointer-events:none;
  left: 1rem;
  top: 0.6rem;
  transition:0.2s ease all; 
  -moz-transition:0.2s ease all; 
  -webkit-transition:0.2s ease all;
}

.form-group {
  width: 100%;
  display: flex;
  flex-direction: column;
  padding: 2rem;
  gap: 1rem;
  justify-content: center;
  align-items: center;
}

input[type=text], input[type=text-area] {
  display: block;
  background-color: #fafaf9;
  color: #171717;
  width: 100%;
  padding: 0.7rem 1rem;
  border-radius: 0.5rem;
  border: none;
}

input[type=text-area] { 
  display: block;
  height: 6rem;
  width: 18rem;
}

/* Mobile */
@media (max-width: 700px) {
  .contact-left, .contact-right {
    height: 50%;
    width: 100%;
  }
}

/* Tablet and Smaller Desktop */
@media (min-width: 701px) and (max-width: 1120px) {
  .contact-left, .contact-right {
    height: 50%;
    width: 100%;
  }
}

.gradient-shift {
  clip-path: url(#dough);
  background: linear-gradient(121deg, #0027ff, #09005a, #00d2ae, #0a196b);
  background-size: 800% 800%;

  -webkit-animation: gradientShift 16s ease infinite;
  -moz-animation: gradientShift 16s ease infinite;
  animation: gradientShift 16s ease infinite;
}

@-webkit-keyframes gradientShift {
  0%{background-position:0% 50%}
  50%{background-position:100% 50%}
  100%{background-position:0% 50%}
}
@-moz-keyframes gradientShift {
  0%{background-position:0% 50%}
  50%{background-position:100% 50%}
  100%{background-position:0% 50%}
}
@keyframes gradientShift {
  0%{background-position:0% 50%}
  50%{background-position:100% 50%}
  100%{background-position:0% 50%}
}

.fill-primary {
  padding: 5px;
  border-radius: 5px;
  background-color: var(--bg-primary);
}
.gradient-border {
  padding: 3px;
  border-radius: 5px;
  background: linear-gradient(121deg, #0027ff, #09005a, #00d2ae, #0a196b);
  background-size: 800% 800%;

  -webkit-animation: gradientShift 10s ease infinite;
  -moz-animation: gradientShift 10s ease infinite;
  animation: gradientShift 10s ease infinite;
}

